# calculator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Calculator.cpp  Calculator.h  CalculatorTest.cpp  LICENSE  README.md  Runner.cpp
.github/workflows/: cmake.yml
evaluator/: EvaluationContext.h  Evaluator.cpp  Evaluator.h
function/: FunctionRegistry.h
operator/: AddOperator.h  AndOperator.h  AssignmentOperator.h  BinaryAndOperator.h  BinaryOrOperator.h  BinaryXorOperator.h  Context.h  DivideOperator.h  ExponentOperator.h  FunctionOperator.h  GetVariableOperator.h  ModuloOperator.h  MultiplyOperator.h  NotOperator.h  Operator.cpp  Operator.h  OperatorRegistry.cpp  OperatorRegistry.h  OrOperator.h  SetVariableOperator.h  SubtractOperator.h  Value.h  ValueOperator.h  VariableOperator.h
parser/: Parser.cpp  Parser.h
preprocessor/: Preprocessor.cpp  Preprocessor.h
resource/: basic.rr  sqrt-function.ru  sum-function.ru
tokenizer/: Token.h  Tokenizer.cpp  Tokenizer.h
utils/: StringUtils.h
